--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,11 @@
     body {
         @apply bg-[hsl(0,0%,8%)] text-white;
     }
+
+    header {
+        @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4
+            transition-all lg:px-10 lg:py-6;
+    }
 }
 
 /* custom classes */
