--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,4 +21,9 @@
         @apply cursor-pointer text-sm font-light text-[hsl(0,0%,90%)]
                 transition duration-[0.4s] hover:text-[hsl(0,0%,70%)];
     }
+
+    .bannerButton {
+        @apply flex items-center gap-x-2 rounded-sm px-5 py-1.5 text-sm font-semibold
+            transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+    }
 }
