updated and added custom scrollbar
but not working in firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 /* html, body, heading */
 @layer base {
     body {
-        @apply bg-[hsl(0,0%,8%)] text-white;
+        @apply bg-[hsl(0,0%,8%)] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
     }
 
     header {
